@@ -1,6 +1,8 @@
 DIST ghc-6.6.1-src-extralibs.tar.bz2 1928527 RMD160 1c18c85d978c4b3369132e247c823aaa90ea8530 SHA1 1398f6c35191d52410a2e066b382635dff0d8d6d SHA256 d162a82fc388fdd48c327b09bb6d778f2313d12d5282f3b120ac08a5d4e78902
 DIST time-1.1.2.0.tar.gz 51035 RMD160 8931ed32b9c2463e0f92fa3cea08cd3ffac11c7c SHA1 770dd3f2db6958860475cd765483e901b2fa647b SHA256 09d1fdcab8fb176d0001b7ffd4bee7d4bf1c77b8e5f333aff01f2ffe19c6a47e
+DIST time-1.1.2.4.tar.gz 53062 RMD160 adfbe1644a2f6f67f2715504ddac13fee7299b39 SHA1 f6de0ecfb1182687a8872762cc7ed30b479d2a0d SHA256 11dfcb9b5ca76428a7a31019928c3c1898320f774e5d3df8e4407580d074fad3
 EBUILD time-1.1.1.ebuild 648 RMD160 af0c4434b4dc8d93d74e4a13c1adf5d290bae055 SHA1 8e2cbd44fcca538f9b824a1cb5239098c83a27ce SHA256 442947c47690b206081db507841b2261b5740e21b860d80889ec59da12829c89
 EBUILD time-1.1.2.0.ebuild 559 RMD160 3cd38dd751eeedd1004daeef1fa33c952849b695 SHA1 3277f099f7644ad460eec588c770d8340bb26100 SHA256 079c765a7bc5d5ea7f52add2a8521defe7e9009b10c5e101477bd7d8dbc3c034
-MISC ChangeLog 2065 RMD160 2968f5dc6656a77c40d7148eaa39db4e77d9cebc SHA1 4166263b3b00106a6354daf56257293175a5094b SHA256 eb60a7dd9a27d805bef6a1adbc153d4cb6795394633e442247f4cdabb6af1651
+EBUILD time-1.1.2.4.ebuild 595 RMD160 c44c5c2f2f95ec87d4a58e14016bb2cc8d57d26d SHA1 3181b9b57f92e7b20d6015ddb91987ce88b87c15 SHA256 01d38b69ab4f100f05f33c616dcc5d9f7cc0e909752d336d84cf16a043e80666
+MISC ChangeLog 2189 RMD160 4f81b2b8db8723885f013908b462841bc19593c2 SHA1 6b32c7db6c4106f68f83a3961e0a5d4241a7e703 SHA256 cf2d572b54a677d2c88b73dadf20fef5bcb5cf91928adc0cd0a8ecb7eb2f6a29
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
