@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/time
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/ChangeLog,v 1.16 2008/10/04 00:19:36 fmccor Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/ChangeLog,v 1.17 2009/04/19 09:19:37 kolmodin Exp $
+
+*time-1.1.2.4 (19 Apr 2009)
+
+  19 Apr 2009; Lennart Kolmodin <kolmodin@gentoo.org> +time-1.1.2.4.ebuild:
+  Version bump.
 
   04 Oct 2008; Ferris McCormick <fmccor@gentoo.org> time-1.1.2.0.ebuild:
   Sparc stable --- Bug #230919 and Bug #239368.
